--- a/First_Page.html
+++ b/First_Page.html
@@ -141,9 +141,9 @@ function showSlides() {
 <br>
 
 <footer align="bottom"><b>
-<p style="font-size:20px;">Posted by:Devanshi Doshi       Shivani Garud</p>
+<p style="font-size:20px;">Posted by:Devanshi Doshi       Dhwani Manani</p>
 <p style="font-size:20px;">Contact Information 1 :<a href="#">doshi.d@somaiya.edu</a></p>
-<p style="font-size:20px;">Contact Information 2 :<a href="#">s.garud@somaiya.edu</a></p></b>
+<p style="font-size:20px;">Contact Information 2 :<a href="#">dhwanimanani@somaiya.edu</a></p></b>
 </footer>
 </body>
 </html>
