--- a/First_Page.html
+++ b/First_Page.html
@@ -61,7 +61,7 @@ li a:hover:not(.active) {
 <body>
 <ul>
 <li><a href="registration.html" title="Sign In">SignIn</a></li> 
-<li><a href="Login.php" title="Log In">LogIn</a></li> 
+<li><a href="Login.html" title="Log In">LogIn</a></li> 
 <li><a href="ContactUs.html" title="Contact Us">Contact Us</a> </li> 
 <li><a href="Submit1.html" title="About_us">About_us</a></li>
 <li><a href="Help.html" title="Help">Help</a></li>
